# collision_stuff

./: README.md
collision_detection_nav/collision_detector_diagnoser/: CMakeLists.txt  package.xml
collision_detection_nav/collision_detector_diagnoser/ros/cfg/: diagnoser.cfg
collision_detection_nav/collision_detector_diagnoser/ros/include/collision_detector_diagnoser/: collision_detector_diagnoser.h  custom_filter.hpp  sensor_fusion_methods.hpp  sync_policies.h
collision_detection_nav/collision_detector_diagnoser/ros/src/: collision_detector_diagnoser.cpp  collision_detector_diagnoser_node.cpp
collision_detection_nav/simple_collision_detector/: package.xml
collision_detection_nav/simple_collision_detector/ros/include/simple_collision_detector/: simple_collision_detector.h
collision_detection_nav/simple_collision_detector/ros/src/: simple_collision_detector.cpp
collision_diagnosis_nav/footprint_checker/: package.xml
collision_diagnosis_nav/footprint_checker/ros/include/footprint_checker/: base_collision_checker.h  footprint_extender.h
collision_diagnosis_nav/footprint_checker/ros/src/: base_collision_checker.cpp  base_collision_checker_node.cpp  footprint_extender.cpp
collision_diagnosis_nav/kinetic_energy_monitor/ros/include/kinetic_energy_monitor/: kinetic_energy_monitor.h
collision_diagnosis_nav/kinetic_energy_monitor/ros/src/: kinetic_energy_monitor.cpp  kinetic_energy_monitor_node.cpp
collision_filters/velocity_controller_monitoring/cfg/: filter.cfg
collision_filters/velocity_controller_monitoring/scripts/: controller_cusum  controller_filter  controller_plot
collision_filters/velocity_controller_monitoring/src/velocity_controller_monitoring_tools/: CollisionFilter.py
collision_recovery_nav/dynamic_obstacles_recovery/: CMakeLists.txt  fault_plugin.xml  package.xml
collision_recovery_nav/dynamic_obstacles_recovery/ros/include/dynamic_obstacles_recovery/: dynamic_obstacles_recovery.h  static_obstacles_recovery.h
collision_recovery_nav/dynamic_obstacles_recovery/ros/src/: dynamic_obstacles_recovery.cpp  dynamic_obstacles_recovery_node.cpp
collision_recovery_nav/mislocalization_collision_recovery/: CMakeLists.txt  package.xml
collision_recovery_nav/mislocalization_collision_recovery/ros/src/: mislocalization_collision_recovery.cpp
collision_recovery_nav/recovery_costmap_layers/collision_costmap_layer/: CMakeLists.txt  costmap_plugins.xml  package.xml
collision_recovery_nav/recovery_costmap_layers/collision_costmap_layer/ros/include/collision_costmap_layer/: collision_costmap_layer.hpp
collision_recovery_nav/recovery_costmap_layers/collision_costmap_layer/ros/src/: collision_costmap_layer.cpp
collision_recovery_nav/static_obstacles_recovery/: CMakeLists.txt  fault_plugin.xml  package.xml
collision_recovery_nav/static_obstacles_recovery/ros/include/static_obstacles_recovery/: static_obstacles_recovery.h
collision_recovery_nav/static_obstacles_recovery/ros/include/static_obstacles_recovery.h/: static_obstacles_recovery.h
collision_recovery_nav/static_obstacles_recovery/ros/script/: static_obstacles_recovery_node.cpp
collision_recovery_nav/static_obstacles_recovery/ros/src/: static_obstacles_recovery.cpp
collisions_launch/: package.xml
collisions_launch/ros/config/collisions_dwa/: dwa_local_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
collisions_launch/ros/config/collisions_stage/: costmap_common_params.yaml  move_base_params.yaml
collisions_launch/ros/config/experimental_stage/: move_base_params.yaml
collisions_launch/ros/launch/: 2dnav_experimental.launch  2dnav_stage.launch  amcl_stage.launch  defense.launch  nav_common.launch  sensors.launch
collisions_stuff/: CMakeLists.txt  package.xml
fault_core/include/fault_core/: fault_detector.h
fusion_msgs/: CMakeLists.txt  package.xml
fusion_msgs/msg/: monitorStatusMsg.msg
navigation.git/: config  packed-refs
navigation.git/objects/pack/: pack-d755e18cc5ae95a05971c55e8fd92bfb0b130561.idx
navigation_manager/move_base/include/move_base/: move_base_states.h
navigation_manager/move_base_fault_tolerant/include/move_base_fault_tolerant/: move_base_fault_tolerant.h
navigation_manager/move_base_fault_tolerant/src/: move_base_fault_tolerant.cpp
