<?xml version="1.0"?>
<package>
  <name>collisions_stuff</name>
  <version>1.0.0</version>
  <description>A Collision Detector and Recovery node compatible with b-it-bots repositories</description>

  <maintainer email="jocamaba1989@gmail.com">Jose Mayoral</maintainer>

  <license>GPLv3</license>

  <author email="olima_84@yahoo.com">Oscar Lima</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>simple_collision_detector</run_depend>
  <run_depend>collision_detector_diagnoser</run_depend>
  <run_depend>footprint_checker</run_depend>
  <run_depend>kinetic_energy_monitor</run_depend>
  <run_depend>mcr_recovery_behaviors</run_depend>
  <run_depend>velocity_contoller_monitoring</run_depend>
  <run_depend>dynamic_obstacles_recovery</run_depend>
  <run_depend>mislocalization_collision_recovery</run_depend>
  <run_depend>collision_costmap_layer</run_depend>
  <run_depend>simple_collision_recovery</run_depend>
  <run_depend>static_obstacles_recovery</run_depend>
  <run_depend>collisions_launch</run_depend>
  <run_depend>simple_costmap_layer</run_depend>
  <run_depend>simple_recovery_behavior</run_depend>
  <run_depend>fault_core</run_depend>
  <run_depend>fusion_msgs</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>move_base_fault_tolerant</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
