<?xml version="1.0"?>
<package>
  <name>fusion_msgs</name>
  <version>0.1.0</version>
  <description>The fusion_msgs package</description>

  <maintainer email="jocamaba1989@gmail.com">Jose Mayoral</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>fault_core</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>fault_core</run_depend>

  <export>
  </export>
</package>
