<?xml version="1.0"?>
<package>
  <name>simple_collision_detector</name>
  <version>1.0.0</version>
  <description>The simple_collision_detector package provides a simple interface with move_base_fault_tolerant package</description>

  <maintainer email="jose@todo.todo">jose</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>fault_core</build_depend>
  <build_depend>fusion_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>fault_core</run_depend>
  <run_depend>fusion_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
    <fault_core plugin="${prefix}/fault_plugin.xml" />
  </export>
</package>
