<?xml version="1.0"?>
<package>
  <name>dynamic_obstacles_recovery</name>
  <version>1.0.0</version>
  <description>The dynamic_obstacles_recovery package, a recovery strategy for dynamic obstacles collision...</description>

  <maintainer email="jose@todo.todo"> Jose C Mayoral Banos</maintainer>
  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>fault_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mcr_recovery_behaviors</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>fault_core</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>mcr_recovery_behaviors</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <fault_core plugin="${prefix}/fault_plugin.xml" />
  </export>
</package>
