<?xml version="1.0"?>
<package>
  <name>mislocalization_collision_recovery</name>
  <version>1.0.0</version>
  <description>The mislocalization_collision_recovery package</description>

  <maintainer email="jocamaba1989@gmail.com">Jose C Mayoral Banos</maintainer>
  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>fault_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>fault_core</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <fault_core plugin="${prefix}/fault_plugin.xml" />
  </export>
</package>
